style: 💄 Fix horizontal scroll on mobile device

--- a/app/javascript/src/stylesheets/application.scss
+++ b/app/javascript/src/stylesheets/application.scss
@@ -1,3 +1,7 @@
 @charset "utf-8";
 
 @import "bulma-initialize";
+
+.section.is-word-break {
+  overflow-wrap: break-word;
+}
